--- a/style.css
+++ b/style.css
@@ -8,12 +8,12 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
-}
+  align-items: center;  
+  }
 
 .main {
-  background-color: white;
-  border: 1px solid black;
+  background-color: white;  
+  /* border: 1px solid black; */
   position: absolute;
   top: 50%;
   left: 50%;
@@ -30,7 +30,7 @@ input{
 }
 
 #selectBox {
-  border: 1px solid gainsboro;
+  border: 1px solid rgb(250, 238, 238);
 }
 
 .btn{
